--- a/about.html
+++ b/about.html
@@ -1,2 +1,2 @@
 <h1>cac ban nho subcribe cho minh nhe </h1>
-<h2> nho subcribe kenh minh cac ban nhe</h2>
+<h2> nho subcribe kenh minh cac ban nhe, ahihi co y de conflict </h2>
